Update title to be consistent
Minor fixes to README

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Diceware Generator</title>
+  <title>Diceware Passphrase Generator</title>
   <link rel="stylesheet" href="assets/bulma-0.7.2.min.css">
   <style>
     [v-cloak] {
@@ -24,7 +24,7 @@
 
     <div class="container">
 
-      <h1 class="title">Diceware Generator</h1>
+      <h1 class="title">Diceware Passphrase Generator</h1>
 
       <div class="field">
         <label class="label is-uppercase">Number of Words</label>
