Make clipboard button gray instead of white

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
       <div class="field is-clearfix">
         <div class="control">
-          <a class="button is-large is-pulled-right" id="clipboard-button" data-clipboard-target="#generated-passphrase" title="Copy to clipboard">
+          <a class="button is-large is-pulled-right is-light" id="clipboard-button" data-clipboard-target="#generated-passphrase" title="Copy to clipboard">
             <img src="assets/clippy.svg" height="36" width="36">
           </a>
         </div>
