Calculate the number of characters in the phrase
Since it's not immediately obvious

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
             <img src="assets/clippy.svg" height="36" width="36">
           </a>
         </div>
+
+        <p class="has-text-grey is-size-7">
+          {{ passphrase.length }} characters
+        </p>
       </div>
 
     </div>
