Reorganize directory structure

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Diceware Passphrase Generator</title>
-  <link rel="stylesheet" href="assets/bulma-0.7.2.min.css">
+  <link rel="stylesheet" href="assets/css/bulma-0.7.2.min.css">
   <style>
     [v-cloak] {
       display: none;
@@ -55,7 +55,7 @@
       <div class="field is-clearfix">
         <div class="control">
           <a class="button is-large is-pulled-right is-light" id="clipboard-button" data-clipboard-target="#generated-passphrase" title="Copy to clipboard">
-            <img src="assets/clippy.svg" height="36" width="36">
+            <img src="assets/img/clippy.svg" height="36" width="36">
           </a>
         </div>
 
@@ -78,8 +78,8 @@
     </div>
   </footer>
 
-  <script src="assets/vue-2.5.22.min.js"></script>
-  <script src="assets/clipboard-2.0.4.min.js"></script>
+  <script src="assets/js/vue-2.5.22.min.js"></script>
+  <script src="assets/js/clipboard-2.0.4.min.js"></script>
   <script src="wordlist.js"></script>
   <script src="app.js"></script>
 
