Reduce size of footer

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,10 @@
       top: 100vh;
     }
 
+    .footer {
+      padding: 2rem;
+    }
+
     @media screen and (min-width: 1068px) {
       .container {
         max-width: 600px;
