--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
 
   <script src="assets/js/vue-2.5.22.min.js"></script>
   <script src="assets/js/clipboard-2.0.4.min.js"></script>
-  <script src="wordlist.js"></script>
+  <script src="wordlist.js?v=1"></script>
   <script src="app.js?v=1"></script>
 
 </body>
